Add provider and dbEntity Update models

--- a/WebAutopark/Views/Vehicle/GetVehicles.cshtml
+++ b/WebAutopark/Views/Vehicle/GetVehicles.cshtml
@@ -45,7 +45,7 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Id)
+                    @Html.DisplayFor(modelItem => item.VehicleId)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.VehicleType.TypeName)
@@ -54,7 +54,7 @@
                     @Html.DisplayFor(modelItem => item.ModelName)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.RegistrationDate)
+                    @Html.DisplayFor(modelItem => item.RegistrationNumber)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Weight)
