--- a/WebAutopark/Views/Vehicle/GetVehicles.cshtml
+++ b/WebAutopark/Views/Vehicle/GetVehicles.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebAutopark.Core.Entities.Vehicle>
+@model IEnumerable<WebAutopark.Core.Entities.Vehicle>
 
 @{ ViewData["Title"] = "ViewVehicles"; }
 
@@ -66,13 +66,16 @@
                     @Html.DisplayFor(modelItem => item.Mileage)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.KmPerFullTank)
-                </td>
-                <td>
                     @Html.DisplayFor(modelItem => item.Color)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.EngineConsumption)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.KmPerFullTank())
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.GetCalcTaxPerMonth())
                 </td>
                 
             </tr>
