--- a/WebAutopark/Views/Home/Index.cshtml
+++ b/WebAutopark/Views/Home/Index.cshtml
@@ -1,9 +1,11 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-
+    <h2 class="display-5">Welcome to Web version of Autopark</h2>
 </div>
+<div>Technologies that I used:</div>
+<ul>
+    <li>ASP.NET Core 3, .NET 5, Dapper</li>
+    <li>CSS3(Bootstrap-4), HTML5</li>
+</ul>
