--- a/WebAutopark/Views/Shared/_Layout.cshtml
+++ b/WebAutopark/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>@ViewData["Title"] - WebAutopark</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="~/css/site.css"/>
+    <link rel="stylesheet" href="~/css/style.css"/>
 </head>
 <body>
 <header>
@@ -21,6 +21,12 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Detail" asp-action="Index">Detail</a>
+                    </li>
+                    <li>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="VehicleType" asp-action="Index">VehicleType</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -31,15 +37,16 @@
         @RenderBody()
     </main>
 </div>
-
 <footer class="border-top footer text-muted">
-    <div class="container">
-
+    <div class="container text-center">
+        <a href="https://github.com/kuzmiich/DevIncubatorCore">Core tasks GitHub</a> |
+        <a href="https://github.com/kuzmiich/DevIncubatorAutopark">Autopark GitHub</a> |
+        <a href="https://github.com/kuzmiich/DevIncubatorWebAutopark">WebAutopark GitHub</a>
     </div>
 </footer>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-<script src="~/js/site.js" asp-append-version="true"></script>
+<script src="~/js/main.js" asp-append-version="true"></script>
 @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
