--- a/WebAutopark/Views/Vehicle/Index.cshtml
+++ b/WebAutopark/Views/Vehicle/Index.cshtml
@@ -64,16 +64,13 @@
                     @Html.DisplayFor(modelItem => item.Mileage)
                 </td>
                 <td>
+                    @Html.DisplayFor(modelItem => item.KmPerFullTank)
+                </td>
+                <td>
                     @Html.DisplayFor(modelItem => item.Color)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.EngineConsumption)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.KmPerFullTank())
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.GetCalcTaxPerMonth())
                 </td>
                 <td class="text-center">
                     @Html.ActionLink("View", "Get", new { id=item.VehicleTypeId }) |
