--- a/WebAutopark/Views/Detail/DetailDelete.cshtml
+++ b/WebAutopark/Views/Detail/DetailDelete.cshtml
@@ -10,13 +10,13 @@
     </div>
     <div class="card-body">
         <h4 class="mb-3 text-center">Detail</h4>
-        <form asp-action="Delete" class="text-center align-content-center">
+        <form asp-action="DetailDelete">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+                <label asp-for="Name" class="control-label ml-md-1"></label>
                 <input asp-for="Name" class="form-control" readonly/>
             </div>
-            <div class="form-group">
+            <div class="form-group text-center">
               <input type="submit" value="Delete" class="btn btn-danger"/>
           </div>
         </form>
@@ -24,6 +24,6 @@
     </div>
 </div>
 
-<div class="text-center m-5">
+<div class="text-center mt-3">
     <a class="btn btn-outline-primary" asp-action="Index">Back to List</a>
 </div>
