--- a/WebAutopark/Views/Detail/DetailUpdate.cshtml
+++ b/WebAutopark/Views/Detail/DetailUpdate.cshtml
@@ -1,28 +1,32 @@
 ﻿@model WebAutopark.Core.Entities.Detail
 @{
-    ViewData["Title"] = "DetailCreate";
+    ViewData["Title"] = "DetailUpdate";
 }
+
 <div class="card col-md-7 m-auto">
     <div class="card-header">
-        <h2 class="mb-2 text-center">Create Detail</h2>
+        <h2 class="text-center">Update Detail</h2>
     </div>
     <div class="card-body">
-        <form asp-action="Create" class="justify-content-center text-center">
+        <form asp-action="DetailUpdate">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input asp-for="DetailId" hidden="hidden"/>
+
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+                <label asp-for="Name" class="control-label ml-md-1"></label>
                 <input asp-for="Name" class="form-control"/>
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary"/>
+
+            <div class="form-group text-center">
+                <input type="submit" value="Save" class="btn btn-outline-success"/>
             </div>
         </form>
     </div>
 </div>
 
-<div class="text-center mt-5">
-    <a class="btn btn-outline-primary" asp-action="Index">Back to List</a>
+<div class="text-center mt-3">
+    <a asp-action="Index" class="btn btn-outline-primary">Back to List</a>
 </div>
 
 @section Scripts {
