--- a/WebAutopark/Views/Detail/Index.cshtml
+++ b/WebAutopark/Views/Detail/Index.cshtml
@@ -22,9 +22,9 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td class="text-center">
-                @Html.ActionLink("View", "Get", new { id=item.DetailId }) |
-                @Html.ActionLink("Edit", "Update", new { id=item.DetailId }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.DetailId })
+                @Html.ActionLink("View", "DetailInfo", new { id=item.DetailId }) |
+                @Html.ActionLink("Edit", "DetailUpdate", new { id=item.DetailId }) |
+                @Html.ActionLink("Delete", "DetailDelete", new { id = item.DetailId })
             </td>
         </tr>
     }
@@ -32,5 +32,5 @@
 </table>
 
 <div class="text-center mt-3">
-    <a class="btn btn-primary" asp-action="Create">Create new</a>
+    <a class="btn btn-primary" asp-action="DetailCreate">Create new</a>
 </div>
