--- a/WebAutopark/Views/VehicleType/VehicleTypeDelete.cshtml
+++ b/WebAutopark/Views/VehicleType/VehicleTypeDelete.cshtml
@@ -10,17 +10,17 @@
     </div>
     <div class="card-body">
         <h4 class="mb-3 text-center">VehicleType</h4>
-        <form asp-action="Delete" class="text-center align-content-center">
+        <form asp-action="VehicleTypeDelete">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="TypeName" class="control-label"></label>
+                <label asp-for="TypeName" class="control-label ml-md-1"></label>
                 <input asp-for="TypeName" class="form-control" readonly/>
             </div>
             <div class="form-group">
-                <label asp-for="TaxCoefficient" class="control-label"></label>
+                <label asp-for="TaxCoefficient" class="control-label ml-md-1"></label>
                 <input asp-for="TaxCoefficient" class="form-control" readonly/>
             </div>
-            <div class="form-group">
+            <div class="form-group text-center">
                 <input type="submit" value="Delete" class="btn btn-danger"/>
             </div>
         </form>
@@ -28,6 +28,6 @@
     </div>
 </div>
 
-<div class="text-center m-5">
+<div class="text-center mt-3">
     <a class="btn btn-outline-primary" asp-action="Index">Back to List</a>
 </div>
