--- a/WebAutopark/Views/VehicleType/VehicleTypeUpdate.cshtml
+++ b/WebAutopark/Views/VehicleType/VehicleTypeUpdate.cshtml
@@ -9,17 +9,17 @@
         <h2 class="text-center">Update Detail</h2>
     </div>
     <div class="card-body">
-        <form asp-action="Update" class="text-center align-content-center">
+        <form asp-action="VehicleTypeUpdate">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input asp-for="VehicleTypeId" hidden="hidden"/>
 
             <div class="form-group">
-                <label asp-for="TypeName" class="control-label"></label>
+                <label asp-for="TypeName" class="control-label ml-md-1"></label>
                 <input asp-for="TypeName" class="form-control"/>
                 <span asp-validation-for="TypeName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TaxCoefficient" class="control-label"></label>
+                <label asp-for="TaxCoefficient" class="control-label ml-md-1"></label>
                 <input asp-for="TaxCoefficient" class="form-control"/>
                 <span asp-validation-for="TaxCoefficient" class="text-danger"></span>
             </div>
@@ -31,7 +31,7 @@
     </div>
 </div>
 
-<div class="text-center mt-5">
+<div class="text-center mt-3">
     <a asp-action="Index" class="btn btn-outline-primary">Back to List</a>
 </div>
 
