Added VehicleController, razor pages, ViewModels Updated repositories, models, create vehicle sql query

--- a/WebAutopark/Views/Shared/_Layout.cshtml
+++ b/WebAutopark/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                     <li>
                         <a class="nav-link text-dark" asp-area="" asp-controller="VehicleType" asp-action="Index">VehicleType</a>
                     </li>
+                    <li>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Vehicle" asp-action="Index">Vehicle</a>
+                    </li>
                 </ul>
             </div>
         </div>
