--- a/WebAutopark/Views/VehicleType/Index.cshtml
+++ b/WebAutopark/Views/VehicleType/Index.cshtml
@@ -3,11 +3,14 @@
 @{
     ViewData["Title"] = "VehicleTypeList";
 }
-<h1>VehicleType page</h1>
+<h1 class="text-center">VehicleType page</h1>
 
 <table class="table">
     <thead class="thead-light">
     <tr>
+        <th>
+            Id
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.TypeName)
         </th>
@@ -22,15 +25,18 @@
         {
             <tr>
                 <td>
+                    @Html.DisplayFor(modelItem => item.VehicleTypeId)
+                </td>
+                <td>
                     @Html.DisplayFor(modelItem => item.TypeName)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.TaxCoefficient)
                 </td>
                 <td class="text-center">
-                    @Html.ActionLink("View", "VehicleTypeInfo", new { id=item.VehicleTypeId }) |
-                    @Html.ActionLink("Edit", "VehicleTypeUpdate", new { id=item.VehicleTypeId }) |
-                    @Html.ActionLink("Delete", "VehicleTypeDelete", new { id = item.VehicleTypeId })
+                    @Html.ActionLink("View", "VehicleTypeInfo", new {id = item.VehicleTypeId}) |
+                    @Html.ActionLink("Edit", "VehicleTypeUpdate", new {id = item.VehicleTypeId}) |
+                    @Html.ActionLink("Delete", "VehicleTypeDelete", new {id = item.VehicleTypeId})
                 </td>
             </tr>
         }
