--- a/WebAutopark/Views/VehicleType/VehicleTypeUpdate.cshtml
+++ b/WebAutopark/Views/VehicleType/VehicleTypeUpdate.cshtml
@@ -6,7 +6,7 @@
 
 <div class="card col-md-7 m-auto">
     <div class="card-header">
-        <h2 class="text-center">Update Detail</h2>
+        <h2 class="text-center">Update VehicleType</h2>
     </div>
     <div class="card-body">
         <form asp-action="VehicleTypeUpdate">
