--- a/WebAutopark/Views/Detail/Index.cshtml
+++ b/WebAutopark/Views/Detail/Index.cshtml
@@ -3,27 +3,33 @@
 @{
     ViewData["Title"] = "DetailList";
 }
-<h1>Detail page</h1>
+<h1 class="text-center">Detail page</h1>
 
 <table class="table">
     <thead>
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th></th>
-    </tr>
+        <tr>
+            <th>
+                Id
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th></th>
+        </tr>
     </thead>
     <tbody>
     @foreach (var item in Model) 
     {
         <tr>
             <td>
+                @Html.DisplayFor(modelItem => item.DetailId)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td class="text-center">
-                @Html.ActionLink("View", "DetailInfo", new { id=item.DetailId }) |
-                @Html.ActionLink("Edit", "DetailUpdate", new { id=item.DetailId }) |
+                @Html.ActionLink("View", "DetailInfo", new { id = item.DetailId }) |
+                @Html.ActionLink("Edit", "DetailUpdate", new { id = item.DetailId }) |
                 @Html.ActionLink("Delete", "DetailDelete", new { id = item.DetailId })
             </td>
         </tr>
