--- a/WebAutopark/Views/VehicleType/VehicleTypeCreate.cshtml
+++ b/WebAutopark/Views/VehicleType/VehicleTypeCreate.cshtml
@@ -12,6 +12,7 @@
     <div class="card-body">
         <form asp-action="VehicleTypeCreate">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
             <div class="form-group">
                 <label asp-for="TypeName" class="control-label ml-md-1"></label>
                 <input asp-for="TypeName" class="form-control" />
@@ -22,8 +23,9 @@
                 <input asp-for="TaxCoefficient" class="form-control" />
                 <span asp-validation-for="TaxCoefficient" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary text-center" />
+
+            <div class="form-group text-center">
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
