--- a/WebAutopark/Views/Detail/Index.cshtml
+++ b/WebAutopark/Views/Detail/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebAutopark.Core.Entities.Detail>
+﻿@model IEnumerable<WebAutopark.BusinessLogic.Models.DetailViewModel>
 
 @{
     ViewData["Title"] = "DetailList";
