--- a/WebAutopark/Views/Shared/_Layout.cshtml
+++ b/WebAutopark/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                     <li>
                         <a class="nav-link text-dark" asp-area="" asp-controller="Vehicle" asp-action="Index">Vehicle</a>
                     </li>
+                    <li>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="Index">Order</a>
+                    </li>
                 </ul>
             </div>
         </div>
