--- a/WebAutopark/Views/Vehicle/VehicleUpdate.cshtml
+++ b/WebAutopark/Views/Vehicle/VehicleUpdate.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebAutopark.Core.Entities.Vehicle
+﻿@model WebAutopark.BusinessLogic.Models.VehicleViewModel
 
 @{
     ViewData["Title"] = "Update Vehicle";
