--- a/WebAutopark/Views/VehicleType/Index.cshtml
+++ b/WebAutopark/Views/VehicleType/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebAutopark.Core.Entities.VehicleType>
+﻿@model IEnumerable<WebAutopark.BusinessLogic.Models.VehicleTypeViewModel>
 
 @{
     ViewData["Title"] = "VehicleTypeList";
