--- a/WebAutopark/Views/VehicleType/VehicleTypeUpdate.cshtml
+++ b/WebAutopark/Views/VehicleType/VehicleTypeUpdate.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebAutopark.Core.Entities.VehicleType
+﻿@model WebAutopark.BusinessLogic.Models.VehicleTypeViewModel
 
 @{
     ViewData["Title"] = "Update VehicleType";
