--- a/WebAutopark/Views/Detail/DetailUpdate.cshtml
+++ b/WebAutopark/Views/Detail/DetailUpdate.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebAutopark.Core.Entities.Detail
+﻿@model WebAutopark.BusinessLogic.Models.DetailViewModel
 @{
     ViewData["Title"] = "DetailUpdate";
 }
