--- a/WebAutopark/Views/VehicleType/VehicleTypeDelete.cshtml
+++ b/WebAutopark/Views/VehicleType/VehicleTypeDelete.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebAutopark.Core.Entities.VehicleType
+﻿@model WebAutopark.BusinessLogic.Models.VehicleTypeViewModel
 
 @{
     ViewData["Title"] = "VehicleTypeDelete";
@@ -6,7 +6,7 @@
 
 <div class="card col-md-7 m-auto">
     <div class="card-header">
-        <h2 class="text-center">Are you sure you want to delete this?</h2>
+        <h3 class="text-center">Are you sure you want to delete this?</h3>
     </div>
     <div class="card-body">
         <h4 class="mb-3 text-center">VehicleType</h4>
