--- a/WebAutopark/Views/Order/OrderInfo.cshtml
+++ b/WebAutopark/Views/Order/OrderInfo.cshtml
@@ -1,9 +1,12 @@
 ﻿@model WebAutopark.BusinessLogic.Models.OrderViewModel
 
+@{
+    ViewData["Title"] = "OrderInfo";
+}
 
 <div class="card col-md-7 m-auto">
     <div class="card-header">
-        <h2 class="text-center">VehicleType</h2>
+        <h2 class="text-center">Order</h2>
     </div>
     <div class="card-body">
         <div class="form-group">
