--- a/WebAutopark/Views/OrderDetail/OrderDetailCreate.cshtml
+++ b/WebAutopark/Views/OrderDetail/OrderDetailCreate.cshtml
@@ -1,27 +1,23 @@
 ﻿@model WebAutopark.BusinessLogic.Models.OrderDetailViewModel
 
 @{
-    ViewData["Title"] = "Create Vehicle";
+    ViewData["Title"] = "Create Order";
 }
-
 
 <div class="card col-md-7 m-auto">
     <div class="card-header">
-        <h2 class="mb-2 text-center">Create Vehicle</h2>
+        <h2 class="mb-2 text-center">Create Order</h2>
     </div>
     <div class="card-body">
         <form asp-action="OrderDetailCreate">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
+            <input asp-for="OrderId" hidden="hidden" />
+
             <div class="form-group">
                 <label asp-for="DetailId" class="control-label ml-md-1"></label>
                 <input asp-for="DetailId" class="form-control" />
                 <span asp-validation-for="DetailId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="OrderId" class="control-label ml-md-1"></label>
-                <input asp-for="OrderId" class="form-control" />
-                <span asp-validation-for="OrderId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DetailAmount" class="control-label ml-md-1"></label>
