--- a/WebAutopark/Views/Vehicle/Index.cshtml
+++ b/WebAutopark/Views/Vehicle/Index.cshtml
@@ -2,7 +2,23 @@
 
 @{ ViewData["Title"] = "VehicleList"; }
 
-<h1 class="text-center">VehicleType page</h1>
+<h1 class="text-center">Vehicle page</h1>
+
+<form method="get">
+    <div class="form-inline form-group">
+        <label class="control-label mr-3">Sort criteria: </label>
+        <select name="criteria" class="form-control mr-2">
+            <option selected value="1">Id</option>
+            <option value="2">Name</option>
+            <option value="3">Type</option>
+            <option value="4">Mileage</option>
+        </select>
+        <label class="control-label mr-1">Is ascending:</label>
+        <input type="checkbox" name="isAscending" value="true" />
+
+        <input type="submit" value="Filter" class="btn btn-primary ml-2" />
+    </div>
+</form>
 
 <table class="table">
     <thead class="thead-light">
@@ -80,7 +96,7 @@
                     @Html.ActionLink("Edit", "VehicleUpdate", new { id = item.VehicleId }) |
                     @Html.ActionLink("Delete", "VehicleDelete", new { id = item.VehicleId })
                 </td>
-                <td class="text-center" style="min-width: 160px">
+                <td class="text-center" style="min-width: 200px">
                     @using (Html.BeginForm("OrderCreate", "Order", new { id = item.VehicleId }, FormMethod.Post))
                     {
                         @Html.TextBoxFor(v => item.VehicleId, new { @readonly = "readonly", @hidden = "hidden" })
