--- a/WebAutopark/Views/Detail/Index.cshtml
+++ b/WebAutopark/Views/Detail/Index.cshtml
@@ -6,7 +6,7 @@
 <h1 class="text-center">Detail page</h1>
 
 <table class="table">
-    <thead>
+    <thead class="thead-light">
         <tr>
             <th>
                 Id
