--- a/WebAutopark/Views/Vehicle/Index.cshtml
+++ b/WebAutopark/Views/Vehicle/Index.cshtml
@@ -7,106 +7,105 @@
 <form method="get">
     <div class="form-inline form-group">
         <label class="control-label mr-3">Sort criteria: </label>
-        <select name="criteria" class="form-control mr-2">
+        <select name="criteria" class="form-control mr-2" id="criteria">
             <option selected value="1">Id</option>
             <option value="2">Name</option>
             <option value="3">Type</option>
             <option value="4">Mileage</option>
         </select>
         <label class="control-label mr-1">Is ascending:</label>
-        <input type="checkbox" name="isAscending" value="true" />
+        <input type="checkbox" name="isAscending" id="isAscending" />
 
-        <input type="submit" value="Filter" class="btn btn-primary ml-2" />
+        <input type="submit" value="filter" class="btn btn-primary ml-2" id="filter"/>
     </div>
 </form>
 
 <table class="table">
     <thead class="thead-light">
-        <tr>
-            <th>
-                Id
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ModelName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.VehicleTypeId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RegistrationNumber)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ManufactureYear)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Weight)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Mileage)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Color)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.EngineConsumption)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TankCapacity)
-            </th>
-            <th></th>
-            <th></th>
-        </tr>
+    <tr>
+        <th>
+            Id
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ModelName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.VehicleType.TypeName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.RegistrationNumber)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ManufactureYear)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Weight)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Mileage)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Color)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.EngineConsumption)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.TankCapacity)
+        </th>
+        <th></th>
+        <th></th>
+    </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.VehicleId)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ModelName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.VehicleTypeId)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.RegistrationNumber)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ManufactureYear)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Weight)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Mileage)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Color)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.EngineConsumption)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TankCapacity)
-                </td>
-                <td class="text-center" style="min-width: 160px">
-                    @Html.ActionLink("View", "VehicleInfo", new { id = item.VehicleId }) |
-                    @Html.ActionLink("Edit", "VehicleUpdate", new { id = item.VehicleId }) |
-                    @Html.ActionLink("Delete", "VehicleDelete", new { id = item.VehicleId })
-                </td>
-                <td class="text-center" style="min-width: 200px">
-                    @using (Html.BeginForm("OrderCreate", "Order", new { id = item.VehicleId }, FormMethod.Post))
-                    {
-                        @Html.TextBoxFor(v => item.VehicleId, new { @readonly = "readonly", @hidden = "hidden" })
-                        <button type="submit" class="btn btn-link">Create order</button>
-                    }
-                </td>
-            </tr>
-        }
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.VehicleId)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ModelName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.VehicleType.TypeName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.RegistrationNumber)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ManufactureYear)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Weight)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Mileage)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Color)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.EngineConsumption)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TankCapacity)
+            </td>
+            <td class="text-center" style="min-width: 160px">
+                @Html.ActionLink("View", "VehicleInfo", new { id = item.VehicleId }) |
+                @Html.ActionLink("Edit", "VehicleUpdate", new { id = item.VehicleId }) |
+                @Html.ActionLink("Delete", "VehicleDelete", new { id = item.VehicleId })
+                @using (Html.BeginForm("OrderCreate", "Order", new { id = item.VehicleId }, FormMethod.Post))
+                {
+                    @Html.TextBoxFor(v => item.VehicleId, new { @readonly = "readonly", @hidden = "hidden" })
+                    <button type="submit" class="btn btn-link p-0">Create order</button>
+                }
+            </td>
+        </tr>
+    }
     </tbody>
 </table>
+
 <div class="text-center">
     <a class="btn btn-primary" asp-action="VehicleCreate">Create new</a>
 </div>
