--- a/WebAutopark/Views/Home/Index.cshtml
+++ b/WebAutopark/Views/Home/Index.cshtml
@@ -6,6 +6,6 @@
 </div>
 <div>Technologies that I used:</div>
 <ul>
-    <li>ASP.NET Core 3, .NET 5, Dapper</li>
-    <li>CSS3(Bootstrap-4), HTML5</li>
+    <li>ASP.NET Core 3, .NET 5, Dapper, Microsoft Sql Server</li>
+    <li>CSS3(Bootstrap-4), HTML5, JS</li>
 </ul>
