--- a/WebAutopark/Views/Shared/_Layout.cshtml
+++ b/WebAutopark/Views/Shared/_Layout.cshtml
@@ -45,14 +45,14 @@
 </div>
 <footer class="border-top footer text-muted">
     <div class="container text-center">
-        <a href="https://github.com/kuzmiich/DevIncubatorCore">Core tasks GitHub</a> |
-        <a href="https://github.com/kuzmiich/DevIncubatorAutopark">Autopark GitHub</a> |
-        <a href="https://github.com/kuzmiich/DevIncubatorWebAutopark">WebAutopark GitHub</a>
+        <a href="https://github.com/kuzmiich/DevIncubator-Core">Core tasks GitHub</a> |
+        <a href="https://github.com/kuzmiich/DevIncubator-Autopark">Autopark GitHub</a> |
+        <a href="https://github.com/kuzmiich/DevIncubator-WebAutopark">WebAutopark GitHub</a>
     </div>
 </footer>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/main.js" asp-append-version="true" type="module"></script>
-@await RenderSectionAsync("Scripts", required: false)
+@await RenderSectionAsync("Scripts", false)
 </body>
 </html>
